--- a/TWON/TWON/TWON.csproj
+++ b/TWON/TWON/TWON.csproj
@@ -16,6 +16,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="View\Pages\LionKing.mp3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="View\Pages\LionKing.mp3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Xam.Plugin.SimpleAudioPlayer" Version="1.1.0" />
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
   </ItemGroup>
 
