--- a/TWON/TWON/TWON.csproj
+++ b/TWON/TWON/TWON.csproj
@@ -17,10 +17,12 @@
 
   <ItemGroup>
     <None Remove="View\Pages\LionKing.mp3" />
+    <None Remove="View\Pages\swoosh.mp3" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="View\Pages\LionKing.mp3" />
+    <EmbeddedResource Include="View\Pages\swoosh.mp3" />
   </ItemGroup>
 
   <ItemGroup>
