--- a/TWON/TWON.UWP/TWON.UWP.csproj
+++ b/TWON/TWON.UWP/TWON.UWP.csproj
@@ -104,10 +104,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="2n.jpg" />
+    <Content Include="Assets\Eternity.mp3" />
     <Content Include="Assets\swoosh.mp3" />
     <Content Include="blueprint-16-9.jpg" />
     <Content Include="blueprint.jpg" />
-    <EmbeddedResource Include="Eternity.mp3" />
+    <Content Include="Eternity.mp3" />
     <Content Include="lines.jpg" />
     <Content Include="new.jpg" />
     <Content Include="image2.jpg" />
